tests/rosetta/out/Dart/call-an-object-method-2.error
run error: exit status 254
../../tests/rosetta/out/Dart/call-an-object-method-2.dart:5:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    sn = (sn as num) + 1;
                     ^
../../tests/rosetta/out/Dart/call-an-object-method-2.dart:60:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/call-an-object-method-2.dart:89:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/call-an-object-method-2.dart:94:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/call-an-object-method-2.dart:98:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
